# Tiplink

./: .gitignore  Cargo.toml  docker-compose.yml  test_jup.rs
backend/: .env  .gitignore  Cargo.toml  build_errors.txt  build_errors_utf8.txt
backend/migrations/2026-04-25-061222-0000_initial_schema/: down.sql  up.sql
backend/migrations/2026-05-02-200336-0000_create_mpc_vaults/: down.sql  up.sql
backend/src/: config.rs  error.rs  main.rs  middleware.rs
backend/src/db/: balances.rs  conn.rs  links.rs  mod.rs  schema.rs  session.rs  swap.rs  transaction.rs  user.rs
backend/src/handlers/: auth_handler.rs  link_handler.rs  mod.rs  moonpay_handlers.rs  swap_handler.rs  user_handler.rs  wallet_handler.rs
backend/src/models/: auth.rs  link.rs  mod.rs  swap.rs  wallet.rs
backend/src/routes/: auth.rs  link.rs  mod.rs  moonpay.rs  swap.rs  user.rs  wallet.rs
backend/src/services/: auth.rs  dkg.rs  hmac.rs  intent.rs  jupiter.rs  mod.rs  moonpay.rs  mpc.rs  solana.rs  twilio.rs
frontend/: WSL_SLOWNESS_README.txt  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/deposit/: page.tsx
frontend/app/api/stripe/checkout/: route.ts
frontend/app/api/stripe/onramp/: route.ts
frontend/app/claim/[hash]/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/create/: page.tsx
frontend/app/dashboard/deposit/: page.tsx
frontend/app/dashboard/swap/: page.tsx
frontend/components/: StripeWidget.tsx  TransakWidget.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/lib/: api.ts
frontend/store/: useStore.ts
indexer/: Cargo.toml
indexer/src/: config.rs  main.rs
indexer/src/db/: pool.rs  queries.rs
indexer/src/filters/: accounts.rs  program.rs
indexer/src/processor/: deposit.rs  link.rs  mod.rs  swap.rs  withdraw.rs
indexer/src/stream/: mod.rs  polling.rs  yellowstone.rs
mpc-server/: .env  .env.node2  .env.node3  Cargo.toml
mpc-server/crypto/: dkg.rs  encrypt.rs  shamir.rs  tss.rs
mpc-server/src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  schema.rs  state.rs  util.rs  vault.rs
mpc-server/src/crypto/: aes.rs  frost.rs  mod.rs
mpc-server/src/routes/: dkg.rs  keys.rs  mod.rs  shares.rs  sign.rs
mpc-server/vaults/: 3d32ac37-003b-46b9-984f-598fbcfb6dee_key_package.vault  3d32ac37-003b-46b9-984f-598fbcfb6dee_pubkey_package.vault  894b0676-0fd0-4f98-a053-1412a7a1f3a7_key_package.vault  894b0676-0fd0-4f98-a053-1412a7a1f3a7_pubkey_package.vault  b8553250-6efb-4508-8198-6db3fa0e485f_key_package.vault  b8553250-6efb-4508-8198-6db3fa0e485f_pubkey_package.vault
mpc-server/vaults/node1/: 56a76a31-b75a-452b-80e0-baff46c66581_key_package.vault  56a76a31-b75a-452b-80e0-baff46c66581_pubkey_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_key_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_pubkey_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_key_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_pubkey_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_key_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_pubkey_package.vault
mpc-server/vaults/node2/: 56a76a31-b75a-452b-80e0-baff46c66581_key_package.vault  56a76a31-b75a-452b-80e0-baff46c66581_pubkey_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_key_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_pubkey_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_key_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_pubkey_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_key_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_pubkey_package.vault
mpc-server/vaults/node3/: 56a76a31-b75a-452b-80e0-baff46c66581_key_package.vault  56a76a31-b75a-452b-80e0-baff46c66581_pubkey_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_key_package.vault  7fae9f2c-b2d2-4802-89b0-50e47e876004_pubkey_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_key_package.vault  a2775499-0c39-453c-87bc-9e8e94e3f910_pubkey_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_key_package.vault  ebd3c175-97b0-4001-9d6c-393ae82bc3f3_pubkey_package.vault
shared/src/: error.rs  types.rs
