[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "numeric", "network-address", "r2d2"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
dotenvy = "0.15.7"
ipnetwork = { version = "0.21.1", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
solana-sdk = "2.1.0"
solana-client = "2.1.0"
hex = "0.4.3"
bincode = "1.2.0"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
frost-ed25519 = "2.2.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
r2d2 = "0.8"
tracing = "0.1.44"
url = "2"
urlencoding = "2"
