[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Yellowstone gRPC
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
tonic = "0.12"
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (same as backend)
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "numeric", "r2d2"] }
r2d2 = "0.8"

# Solana
solana-sdk = "2.2"
spl-token = "7"
bs58 = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
