[package]
name = "mpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio            = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
aes-gcm = "0.10.3" 
rand_core = "0.10.1"
hex = "0.4.3"
chrono           = { version = "0.4", features = ["serde"] }
dotenvy = "0.15" 
aes-gcm = "0.10.3"