[package]
name = "mpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Cryptography
frost-ed25519 = "2.2.0"
aes-gcm = "0.10.3"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.22"
bs58 = "0.5.1"

# State management
dashmap = "6"

# Error handling
thiserror = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
